--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -40,14 +40,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dominio:  {'Calculo': ['Lunes', 'Martes', 'Miercoles'], 'Fisica': ['Lunes', 'Martes', 'Miercoles'], 'Algebra': ['Lunes', 'Martes', 'Miercoles'], 'IA': ['Lunes', 'Martes', 'Miercoles'], 'Algoritmos': ['Lunes', 'Martes', 'Miercoles'], 'Sistemas': ['Lunes', 'Martes', 'Miercoles'], 'Geometria': ['Lunes', 'Martes', 'Miercoles']}\n",
+      "Restricciones:  [('Calculo', 'Fisica'), ('Calculo', 'Algebra'), ('Fisica', 'Algebra'), ('Fisica', 'IA'), ('Fisica', 'Algoritmos'), ('IA', 'Algoritmos'), ('Algebra', 'Sistemas'), ('Algebra', 'Geometria'), ('Sistemas', 'Geometria'), ('IA', 'Algoritmos'), ('IA', 'Sistemas'), ('Algoritmos', 'Sistemas')]\n"
+     ]
+    }
+   ],
    "source": [
+    "from itertools import combinations  \n",
+    "import random  \n",
+    "import time \n",
+    "\n",
     "# configuracion inicial\n",
-    "examenes = [\"examen_1\", \"examen_2\", \"examen_3\", \"examen_4\", \"examen_5\", \"examen_6\", \"examen_7\"]\n",
-    "dias = [\"Lunes\"]\n",
-    "estudiantes = [\"Nelson\", \"Cristian\", \"Chuy\", \"Suriano\"]"
+    "examenes = [\"Calculo\", \"Fisica\", \"Algebra\", \"IA\", \"Algoritmos\", \"Sistemas\", \"Geometria\"]\n",
+    "dias = [\"Lunes\", \"Martes\", \"Miercoles\"]\n",
+    "estudiantes = [\"Nelson\", \"Cristian\", \"Chuy\", \"Suriano\"]\n",
+    "\n",
+    "\n",
+    "# definicion de variables y Dominio: Todos los exámenes pueden asignarse a cualquier dia al principio\n",
+    "dominio = {examen: list(dias) for examen in examenes}\n",
+    "\n",
+    "print(\"Dominio: \", dominio)\n",
+    "\n",
+    "# ejemplo de examenes por estudiante\n",
+    "estudiantes_examenes = {\n",
+    "    \"Nelson\": [\"Calculo\", \"Fisica\", \"Algebra\"],\n",
+    "    \"Cristian\": [\"Fisica\", \"IA\", \"Algoritmos\"],\n",
+    "    \"Chuy\": [\"Algebra\", \"Sistemas\", \"Geometria\"],\n",
+    "    \"Suriano\": [\"IA\", \"Algoritmos\", \"Sistemas\"]\n",
+    "}\n",
+    "\n",
+    "# restricciones\n",
+    "# Restricciones: Lista de tuplas (examen1, examen2) que no pueden estar en el mismo día\n",
+    "restricciones = []\n",
+    "\n",
+    "# Restriccion 2: Estudiantes no pueden tener 2 exzmenes el mismo día\n",
+    "for estudiante, cursos in estudiantes_examenes.items():\n",
+    "    for curso1, curso2 in combinations(cursos, 2):\n",
+    "        if (curso2, curso1) not in restricciones:  # Evitar duplicados\n",
+    "            restricciones.append((curso1, curso2))\n",
+    "\n",
+    "print(\"Restricciones: \", restricciones)"
    ]
   },
   {
@@ -100,8 +139,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
