--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -55,12 +55,13 @@
    "source": [
     "from itertools import combinations  \n",
     "import random  \n",
+    "import pandas as pd\n",
     "import time \n",
     "\n",
     "# configuracion inicial\n",
     "examenes = [\"Calculo\", \"Fisica\", \"Algebra\", \"IA\", \"Algoritmos\", \"Sistemas\", \"Geometria\"]\n",
     "dias = [\"Lunes\", \"Martes\", \"Miercoles\"]\n",
-    "estudiantes = [\"Nelson\", \"Cristian\", \"Chuy\", \"Suriano\"]\n",
+    "estudiantes = [\"Nelson\", \"Christian\", \"Chuy\", \"Suriano\"]\n",
     "\n",
     "\n",
     "# definicion de variables y Dominio: Todos los exámenes pueden asignarse a cualquier dia al principio\n",
@@ -71,7 +72,7 @@
     "# ejemplo de examenes por estudiante\n",
     "estudiantes_examenes = {\n",
     "    \"Nelson\": [\"Calculo\", \"Fisica\", \"Algebra\"],\n",
-    "    \"Cristian\": [\"Fisica\", \"IA\", \"Algoritmos\"],\n",
+    "    \"Christian\": [\"Fisica\", \"IA\", \"Algoritmos\"],\n",
     "    \"Chuy\": [\"Algebra\", \"Sistemas\", \"Geometria\"],\n",
     "    \"Suriano\": [\"IA\", \"Algoritmos\", \"Sistemas\"]\n",
     "}\n",
@@ -86,7 +87,15 @@
     "        if (curso2, curso1) not in restricciones:  # Evitar duplicados\n",
     "            restricciones.append((curso1, curso2))\n",
     "\n",
-    "print(\"Restricciones: \", restricciones)"
+    "print(\"Restricciones: \", restricciones)\n",
+    "\n",
+    "# ver si las asignaciones no dan problemas\n",
+    "def es_asignacion_valida(asignacion, restricciones):\n",
+    "    for exam1, exam2 in restricciones:\n",
+    "        if exam1 in asignacion and exam2 in asignacion:\n",
+    "            if asignacion[exam1] == asignacion[exam2]:\n",
+    "                return False\n",
+    "    return True"
    ]
   },
   {
@@ -98,11 +107,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Solución encontrada: {'Calculo': 'Lunes', 'Fisica': 'Martes', 'Algebra': 'Miercoles', 'IA': 'Lunes', 'Algoritmos': 'Miercoles', 'Sistemas': 'Martes', 'Geometria': 'Lunes'}\n",
+      "Horario de Exámenes por Estudiante:\n",
+      "Tiempo de ejecución: 9.90999978967011e-05 segundos\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Lunes</th>\n",
+       "      <th>Martes</th>\n",
+       "      <th>Miercoles</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Nelson</th>\n",
+       "      <td>[Calculo]</td>\n",
+       "      <td>[Fisica]</td>\n",
+       "      <td>[Algebra]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Christian</th>\n",
+       "      <td>[IA]</td>\n",
+       "      <td>[Fisica]</td>\n",
+       "      <td>[Algoritmos]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Chuy</th>\n",
+       "      <td>[Geometria]</td>\n",
+       "      <td>[Sistemas]</td>\n",
+       "      <td>[Algebra]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Suriano</th>\n",
+       "      <td>[IA]</td>\n",
+       "      <td>[Sistemas]</td>\n",
+       "      <td>[Algoritmos]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Lunes      Martes     Miercoles\n",
+       "Nelson       [Calculo]    [Fisica]     [Algebra]\n",
+       "Christian         [IA]    [Fisica]  [Algoritmos]\n",
+       "Chuy       [Geometria]  [Sistemas]     [Algebra]\n",
+       "Suriano           [IA]  [Sistemas]  [Algoritmos]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#backtracking search"
+    "#backtracking search\n",
+    "def backtracking_search(asignacion_actual, examenes_restantes, dominio, restricciones):\n",
+    "\n",
+    "    if not examenes_restantes:\n",
+    "        return asignacion_actual.copy()  # hay solucion\n",
+    "    \n",
+    "    examen = examenes_restantes[0]\n",
+    "    \n",
+    "    for dia in dominio[examen]:\n",
+    "        nueva_asignacion = asignacion_actual.copy()\n",
+    "        nueva_asignacion[examen] = dia\n",
+    "        \n",
+    "        if es_asignacion_valida(nueva_asignacion, restricciones):\n",
+    "            resultado = backtracking_search(\n",
+    "                nueva_asignacion,\n",
+    "                examenes_restantes[1:],\n",
+    "                dominio,\n",
+    "                restricciones\n",
+    "            )\n",
+    "            if resultado is not None:\n",
+    "                return resultado\n",
+    "    return None  # no hubo solucion\n",
+    "\n",
+    "asignacion_inicial = {}\n",
+    "examenes_sin_asignar = examenes.copy()\n",
+    "\n",
+    "# Medir tiempo de ejecución\n",
+    "inicio = time.perf_counter()\n",
+    "solucion = backtracking_search(asignacion_inicial, examenes_sin_asignar, dominio, restricciones)\n",
+    "final = time.perf_counter() \n",
+    "\n",
+    "tiempo_backtracking = final - inicio\n",
+    "\n",
+    "# Resultados\n",
+    "print(\"Solución encontrada:\", solucion)\n",
+    "horario_estudiantes = {estudiante: {dia: [] for dia in dias} for estudiante in estudiantes}\n",
+    "\n",
+    "# Asignar exámenes a cada estudiante según la solución\n",
+    "for examen, dia in solucion.items():\n",
+    "    for estudiante, cursos in estudiantes_examenes.items():\n",
+    "        if examen in cursos:\n",
+    "            horario_estudiantes[estudiante][dia].append(examen)\n",
+    "\n",
+    "# Convertir a DataFrame de pandas\n",
+    "df_horario = pd.DataFrame.from_dict(horario_estudiantes, orient='index')\n",
+    "df_horario = df_horario[dias]  # Ordenar columnas por días\n",
+    "\n",
+    "# Mostrar la tabla\n",
+    "print(\"Horario de Exámenes por Estudiante:\")\n",
+    "print(\"Tiempo de ejecución:\", tiempo_backtracking, \"segundos\")\n",
+    "df_horario\n",
+    "\n"
    ]
   },
   {
@@ -114,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
