--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -35,211 +35,152 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Configuracion de entorno para los 3 tipos de algoritmos:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dominio:  {'Calculo': ['Lunes', 'Martes', 'Miercoles'], 'Fisica': ['Lunes', 'Martes', 'Miercoles'], 'Algebra': ['Lunes', 'Martes', 'Miercoles'], 'IA': ['Lunes', 'Martes', 'Miercoles'], 'Algoritmos': ['Lunes', 'Martes', 'Miercoles'], 'Sistemas': ['Lunes', 'Martes', 'Miercoles'], 'Geometria': ['Lunes', 'Martes', 'Miercoles']}\n",
-      "Restricciones:  [('Calculo', 'Fisica'), ('Calculo', 'Algebra'), ('Fisica', 'Algebra'), ('Fisica', 'IA'), ('Fisica', 'Algoritmos'), ('IA', 'Algoritmos'), ('Algebra', 'Sistemas'), ('Algebra', 'Geometria'), ('Sistemas', 'Geometria'), ('IA', 'Algoritmos'), ('IA', 'Sistemas'), ('Algoritmos', 'Sistemas')]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from itertools import combinations  \n",
-    "import random  \n",
-    "import pandas as pd\n",
-    "import time \n",
-    "\n",
-    "# configuracion inicial\n",
-    "examenes = [\"Calculo\", \"Fisica\", \"Algebra\", \"IA\", \"Algoritmos\", \"Sistemas\", \"Geometria\"]\n",
-    "dias = [\"Lunes\", \"Martes\", \"Miercoles\"]\n",
-    "estudiantes = [\"Nelson\", \"Christian\", \"Chuy\", \"Suriano\"]\n",
-    "\n",
-    "\n",
-    "# definicion de variables y Dominio: Todos los exámenes pueden asignarse a cualquier dia al principio\n",
-    "dominio = {examen: list(dias) for examen in examenes}\n",
-    "\n",
-    "print(\"Dominio: \", dominio)\n",
-    "\n",
-    "# ejemplo de examenes por estudiante\n",
-    "estudiantes_examenes = {\n",
-    "    \"Nelson\": [\"Calculo\", \"Fisica\", \"Algebra\"],\n",
-    "    \"Christian\": [\"Fisica\", \"IA\", \"Algoritmos\"],\n",
-    "    \"Chuy\": [\"Algebra\", \"Sistemas\", \"Geometria\"],\n",
-    "    \"Suriano\": [\"IA\", \"Algoritmos\", \"Sistemas\"]\n",
-    "}\n",
-    "\n",
-    "# restricciones\n",
-    "# Restricciones: Lista de tuplas (examen1, examen2) que no pueden estar en el mismo día\n",
-    "restricciones = []\n",
-    "\n",
-    "# Restriccion 2: Estudiantes no pueden tener 2 exzmenes el mismo día\n",
-    "for estudiante, cursos in estudiantes_examenes.items():\n",
-    "    for curso1, curso2 in combinations(cursos, 2):\n",
-    "        if (curso2, curso1) not in restricciones:  # Evitar duplicados\n",
-    "            restricciones.append((curso1, curso2))\n",
-    "\n",
-    "print(\"Restricciones: \", restricciones)\n",
-    "\n",
-    "# ver si las asignaciones no dan problemas\n",
-    "def es_asignacion_valida(asignacion, restricciones):\n",
-    "    for exam1, exam2 in restricciones:\n",
-    "        if exam1 in asignacion and exam2 in asignacion:\n",
-    "            if asignacion[exam1] == asignacion[exam2]:\n",
-    "                return False\n",
-    "    return True"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Implementación de backtracking search"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Solución encontrada: {'Calculo': 'Lunes', 'Fisica': 'Martes', 'Algebra': 'Miercoles', 'IA': 'Lunes', 'Algoritmos': 'Miercoles', 'Sistemas': 'Martes', 'Geometria': 'Lunes'}\n",
-      "Horario de Exámenes por Estudiante:\n",
-      "Tiempo de ejecución: 9.90999978967011e-05 segundos\n"
+      "\n",
+      "Solución encontrada:\n",
+      "\n",
+      "Lunes:\n",
+      "  Nelson: Calculo\n",
+      "  Christian: Fisica\n",
+      "  Chuy: Sistemas\n",
+      "  Suriano: IA\n",
+      "\n",
+      "Martes:\n",
+      "  Nelson: Algoritmos\n",
+      "  Christian: Algebra\n",
+      "  Suriano: Geometria\n",
+      "\n",
+      "Miercoles:\n",
+      "\n",
+      "Tiempo de ejecución: 0.000041 segundos\n"
      ]
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Lunes</th>\n",
-       "      <th>Martes</th>\n",
-       "      <th>Miercoles</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>Nelson</th>\n",
-       "      <td>[Calculo]</td>\n",
-       "      <td>[Fisica]</td>\n",
-       "      <td>[Algebra]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Christian</th>\n",
-       "      <td>[IA]</td>\n",
-       "      <td>[Fisica]</td>\n",
-       "      <td>[Algoritmos]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Chuy</th>\n",
-       "      <td>[Geometria]</td>\n",
-       "      <td>[Sistemas]</td>\n",
-       "      <td>[Algebra]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Suriano</th>\n",
-       "      <td>[IA]</td>\n",
-       "      <td>[Sistemas]</td>\n",
-       "      <td>[Algoritmos]</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "                 Lunes      Martes     Miercoles\n",
-       "Nelson       [Calculo]    [Fisica]     [Algebra]\n",
-       "Christian         [IA]    [Fisica]  [Algoritmos]\n",
-       "Chuy       [Geometria]  [Sistemas]     [Algebra]\n",
-       "Suriano           [IA]  [Sistemas]  [Algoritmos]"
+       "({('Nelson', 'Calculo'): 'Lunes',\n",
+       "  ('Nelson', 'Algoritmos'): 'Martes',\n",
+       "  ('Christian', 'Fisica'): 'Lunes',\n",
+       "  ('Christian', 'Algebra'): 'Martes',\n",
+       "  ('Chuy', 'Sistemas'): 'Lunes',\n",
+       "  ('Suriano', 'IA'): 'Lunes',\n",
+       "  ('Suriano', 'Geometria'): 'Martes'},\n",
+       " 4.070000068168156e-05)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#backtracking search\n",
-    "def backtracking_search(asignacion_actual, examenes_restantes, dominio, restricciones):\n",
+    "from itertools import combinations\n",
+    "import random\n",
+    "import time\n",
+    "from collections import defaultdict\n",
     "\n",
-    "    if not examenes_restantes:\n",
-    "        return asignacion_actual.copy()  # hay solucion\n",
+    "def inicializar_problema():\n",
+    "    \"\"\"Configuración inicial del problema\"\"\"\n",
+    "    examenes = [\"Calculo\", \"Fisica\", \"Algebra\", \"IA\", \"Algoritmos\", \"Sistemas\", \"Geometria\"]\n",
+    "    dias = [\"Lunes\", \"Martes\", \"Miercoles\"]\n",
+    "    estudiantes = [\"Nelson\", \"Christian\", \"Chuy\", \"Suriano\"]\n",
     "    \n",
-    "    examen = examenes_restantes[0]\n",
+    "    matricula = {\n",
+    "        \"Nelson\": [\"Calculo\", \"Algoritmos\"],\n",
+    "        \"Christian\": [\"Fisica\", \"Algebra\"],\n",
+    "        \"Chuy\": [\"Sistemas\"],\n",
+    "        \"Suriano\": [\"IA\", \"Geometria\"]\n",
+    "    }\n",
     "    \n",
-    "    for dia in dominio[examen]:\n",
-    "        nueva_asignacion = asignacion_actual.copy()\n",
-    "        nueva_asignacion[examen] = dia\n",
+    "    return examenes, dias, estudiantes, matricula\n",
+    "\n",
+    "def crear_variables_y_dominios(matricula, dias):\n",
+    "    \"\"\"Crea las variables y dominios iniciales\"\"\"\n",
+    "    variables = [(est, examen) for est, examenes in matricula.items() for examen in examenes]\n",
+    "    dominios = {var: list(dias) for var in variables}\n",
+    "    return variables, dominios\n",
+    "\n",
+    "def es_asignacion_valida(var, valor, asignacion):\n",
+    "    \"\"\"Verifica si una asignación es válida según las restricciones\"\"\"\n",
+    "    estudiante, examen = var\n",
+    "    \n",
+    "    # Regla 2: Un estudiante no puede tener dos exámenes el mismo día\n",
+    "    for (est, ex), dia in asignacion.items():\n",
+    "        if est == estudiante and dia == valor:\n",
+    "            return False\n",
+    "    \n",
+    "    # Regla 3: Estudiantes que comparten examen no pueden tenerlo el mismo día\n",
+    "    for (est, ex), dia in asignacion.items():\n",
+    "        if ex == examen and dia == valor:\n",
+    "            return False\n",
+    "    \n",
+    "    return True\n",
+    "\n",
+    "def seleccionar_variable_sin_asignar(variables, asignacion):\n",
+    "    \"\"\"Selecciona la próxima variable a asignar (estrategia simple)\"\"\"\n",
+    "    for var in variables:\n",
+    "        if var not in asignacion:\n",
+    "            return var\n",
+    "    return None\n",
+    "\n",
+    "def resolver_problema_backtracking():\n",
+    "    \"\"\"Función principal que resuelve el problema y mide el tiempo\"\"\"\n",
+    "    # Inicialización\n",
+    "    examenes, dias, estudiantes, matricula = inicializar_problema()\n",
+    "    variables, dominios = crear_variables_y_dominios(matricula, dias)\n",
+    "    \n",
+    "    # Algoritmo de backtracking\n",
+    "    def backtracking(asignacion):\n",
+    "        if len(asignacion) == len(variables):\n",
+    "            return asignacion\n",
     "        \n",
-    "        if es_asignacion_valida(nueva_asignacion, restricciones):\n",
-    "            resultado = backtracking_search(\n",
-    "                nueva_asignacion,\n",
-    "                examenes_restantes[1:],\n",
-    "                dominio,\n",
-    "                restricciones\n",
-    "            )\n",
-    "            if resultado is not None:\n",
-    "                return resultado\n",
-    "    return None  # no hubo solucion\n",
+    "        var = seleccionar_variable_sin_asignar(variables, asignacion)\n",
+    "        for valor in dominios[var]:\n",
+    "            if es_asignacion_valida(var, valor, asignacion):\n",
+    "                asignacion[var] = valor\n",
+    "                resultado = backtracking(asignacion)\n",
+    "                if resultado is not None:\n",
+    "                    return resultado\n",
+    "                del asignacion[var]\n",
+    "        return None\n",
+    "    \n",
+    "    # Medición del tiempo\n",
+    "    inicio = time.perf_counter()\n",
+    "    solucion = backtracking({})\n",
+    "    tiempo_ejecucion = time.perf_counter() - inicio\n",
+    "    \n",
+    "    # Presentación de resultados\n",
+    "    if solucion is None:\n",
+    "        print(\"No se encontró solución\")\n",
+    "        return None, tiempo_ejecucion\n",
+    "    \n",
+    "    # Organizar resultados por día\n",
+    "    calendario = defaultdict(list)\n",
+    "    for (estudiante, examen), dia in solucion.items():\n",
+    "        calendario[dia].append((estudiante, examen))\n",
+    "    \n",
+    "    # Mostrar resultados\n",
+    "    print(\"\\nSolución encontrada:\")\n",
+    "    for dia in dias:\n",
+    "        print(f\"\\n{dia}:\")\n",
+    "        for estudiante, examen in calendario[dia]:\n",
+    "            print(f\"  {estudiante}: {examen}\")\n",
+    "    \n",
+    "    print(f\"\\nTiempo de ejecución: {tiempo_ejecucion:.6f} segundos\")\n",
+    "    return solucion, tiempo_ejecucion\n",
     "\n",
-    "asignacion_inicial = {}\n",
-    "examenes_sin_asignar = examenes.copy()\n",
-    "\n",
-    "# Medir tiempo de ejecución\n",
-    "inicio = time.perf_counter()\n",
-    "solucion = backtracking_search(asignacion_inicial, examenes_sin_asignar, dominio, restricciones)\n",
-    "final = time.perf_counter() \n",
-    "\n",
-    "tiempo_backtracking = final - inicio\n",
-    "\n",
-    "# Resultados\n",
-    "print(\"Solución encontrada:\", solucion)\n",
-    "horario_estudiantes = {estudiante: {dia: [] for dia in dias} for estudiante in estudiantes}\n",
-    "\n",
-    "# Asignar exámenes a cada estudiante según la solución\n",
-    "for examen, dia in solucion.items():\n",
-    "    for estudiante, cursos in estudiantes_examenes.items():\n",
-    "        if examen in cursos:\n",
-    "            horario_estudiantes[estudiante][dia].append(examen)\n",
-    "\n",
-    "# Convertir a DataFrame de pandas\n",
-    "df_horario = pd.DataFrame.from_dict(horario_estudiantes, orient='index')\n",
-    "df_horario = df_horario[dias]  # Ordenar columnas por días\n",
-    "\n",
-    "# Mostrar la tabla\n",
-    "print(\"Horario de Exámenes por Estudiante:\")\n",
-    "print(\"Tiempo de ejecución:\", tiempo_backtracking, \"segundos\")\n",
-    "df_horario\n",
-    "\n"
+    "resolver_problema_backtracking()"
    ]
   },
   {
@@ -251,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
