--- a/lab8.ipynb
+++ b/lab8.ipynb
@@ -39,57 +39,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Solución encontrada:\n",
-      "\n",
-      "Lunes:\n",
-      "  Nelson: Calculo\n",
-      "  Christian: Fisica\n",
-      "  Chuy: Sistemas\n",
-      "  Suriano: IA\n",
-      "\n",
-      "Martes:\n",
-      "  Nelson: Algoritmos\n",
-      "  Christian: Algebra\n",
-      "  Suriano: Geometria\n",
-      "\n",
-      "Miercoles:\n",
-      "\n",
-      "Tiempo de ejecución: 0.000041 segundos\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "({('Nelson', 'Calculo'): 'Lunes',\n",
-       "  ('Nelson', 'Algoritmos'): 'Martes',\n",
-       "  ('Christian', 'Fisica'): 'Lunes',\n",
-       "  ('Christian', 'Algebra'): 'Martes',\n",
-       "  ('Chuy', 'Sistemas'): 'Lunes',\n",
-       "  ('Suriano', 'IA'): 'Lunes',\n",
-       "  ('Suriano', 'Geometria'): 'Martes'},\n",
-       " 4.070000068168156e-05)"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "#### Configuración del entorno"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from itertools import combinations\n",
     "import random\n",
     "import time\n",
     "from collections import defaultdict\n",
     "\n",
+    "# las reglas estaban raras,pero las interpretamos de la siguiente forma (con corroboración del aux)\n",
+    "# lo resolvimos cumpliendo las siguientes reglas.\n",
+    "#regla 1: Deben ser 7 examenes/asignaciones en total, a lo largo de los 3 días. En un día puede haber más de una asignación. marta hace fisica el lunes y paco algebra el lunes tambien por ejemplo.\n",
+    "#regla 2: cada estudiante solo puede hacer un examen al día\n",
+    "#regla 3: Los estudiantes que comparten un curso, no pueden tener ese examen el mismo día. Si pedro y jose llevan fisica, no pueden tenerlo el mismo día.\n",
+    "\n",
+    "#regla extra recomendada: que todos los días haya al menos 1 examen \n",
     "def inicializar_problema():\n",
     "    \"\"\"Configuración inicial del problema\"\"\"\n",
     "    examenes = [\"Calculo\", \"Fisica\", \"Algebra\", \"IA\", \"Algoritmos\", \"Sistemas\", \"Geometria\"]\n",
@@ -111,7 +84,8 @@
     "    dominios = {var: list(dias) for var in variables}\n",
     "    return variables, dominios\n",
     "\n",
-    "def es_asignacion_valida(var, valor, asignacion):\n",
+    "\n",
+    "def es_asignacion_valida(var, valor, asignacion, dias):\n",
     "    \"\"\"Verifica si una asignación es válida según las restricciones\"\"\"\n",
     "    estudiante, examen = var\n",
     "    \n",
@@ -125,6 +99,14 @@
     "        if ex == examen and dia == valor:\n",
     "            return False\n",
     "    \n",
+    "    # Regla extra: Al final de la asignación, verificar que cada día tenga al menos un examen\n",
+    "    if len(asignacion) == len(dias) * len(asignacion.keys()) // len(dias):\n",
+    "        conteo_dias = defaultdict(int)\n",
+    "        for dia in asignacion.values():\n",
+    "            conteo_dias[dia] += 1\n",
+    "        if any(conteo == 0 for conteo in conteo_dias.values()):\n",
+    "            return False\n",
+    "\n",
     "    return True\n",
     "\n",
     "def seleccionar_variable_sin_asignar(variables, asignacion):\n",
@@ -132,7 +114,68 @@
     "    for var in variables:\n",
     "        if var not in asignacion:\n",
     "            return var\n",
-    "    return None\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Solución encontrada:\n",
+      "\n",
+      "Lunes:\n",
+      "  Nelson: Calculo\n",
+      "  Christian: Fisica\n",
+      "  Chuy: Sistemas\n",
+      "  Suriano: IA\n",
+      "\n",
+      "Martes:\n",
+      "  Nelson: Algoritmos\n",
+      "  Christian: Algebra\n",
+      "\n",
+      "Miercoles:\n",
+      "  Suriano: Geometria\n",
+      "\n",
+      "Tiempo de ejecución: 0.000123 segundos\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "({('Nelson', 'Calculo'): 'Lunes',\n",
+       "  ('Nelson', 'Algoritmos'): 'Martes',\n",
+       "  ('Christian', 'Fisica'): 'Lunes',\n",
+       "  ('Christian', 'Algebra'): 'Martes',\n",
+       "  ('Chuy', 'Sistemas'): 'Lunes',\n",
+       "  ('Suriano', 'IA'): 'Lunes',\n",
+       "  ('Suriano', 'Geometria'): 'Miercoles'},\n",
+       " 0.00012269999979253043)"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from itertools import combinations\n",
+    "import random\n",
+    "import time\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "# las reglas estaban raras,pero las interpretamos de la siguiente forma (con corroboración del aux)\n",
+    "# lo resolvimos cumpliendo las siguientes reglas.\n",
+    "#regla 1: Deben ser 7 examenes/asignaciones en total, a lo largo de los 3 días. En un día puede haber más de una asignación. marta hace fisica el lunes y paco algebra el lunes tambien por ejemplo.\n",
+    "#regla 2: cada estudiante solo puede hacer un examen al día\n",
+    "#regla 3: Los estudiantes que comparten un curso, no pueden tener ese examen el mismo día. Si pedro y jose llevan fisica, no pueden tenerlo el mismo día.\n",
+    "\n",
+    "#regla extra recomendada: que todos los días haya al menos 1 examen \n",
     "\n",
     "def resolver_problema_backtracking():\n",
     "    \"\"\"Función principal que resuelve el problema y mide el tiempo\"\"\"\n",
@@ -143,11 +186,17 @@
     "    # Algoritmo de backtracking\n",
     "    def backtracking(asignacion):\n",
     "        if len(asignacion) == len(variables):\n",
-    "            return asignacion\n",
+    "            # Verificar que todos los días tengan al menos un examen\n",
+    "            conteo_dias = defaultdict(int)\n",
+    "            for dia in asignacion.values():\n",
+    "                conteo_dias[dia] += 1\n",
+    "            if all(conteo_dias[dia] > 0 for dia in dias):\n",
+    "                return asignacion\n",
+    "            return None\n",
     "        \n",
     "        var = seleccionar_variable_sin_asignar(variables, asignacion)\n",
     "        for valor in dominios[var]:\n",
-    "            if es_asignacion_valida(var, valor, asignacion):\n",
+    "            if es_asignacion_valida(var, valor, asignacion, dias):\n",
     "                asignacion[var] = valor\n",
     "                resultado = backtracking(asignacion)\n",
     "                if resultado is not None:\n",
@@ -192,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
